--- a/index.Rmd
+++ b/index.Rmd
@@ -93,7 +93,7 @@ Perform descriptive analysis to facilitate data driven decision making.
 **Google Sheets**  
   
   
-* Calculated an average of 3.22% (=AVERAGE(E2:E24)) of murders occurring during a full moon over the period of 2001 to 2023 in the city of Chicago. Based on a synodic lunar month of 29.531 days the average percentage of full moon murders expected is 3.39%.  The mean of 3.22% calculated over the twenty-two year period is less than the expected average of 3.39%, indicating that the full moon does not lead to any extraordinary increase in the number of homicides.  
+* Calculated an average of 3.22% (=AVERAGE(E2:E24)) of murders occurring during a full moon over the period of 2001 to 2023 in the city of Chicago. Based on a synodic lunar month of 29.531 days the average percentage of full moon murders expected is 3.39%.  The mean of 3.22% calculated over the twenty-three year period is less than the expected average of 3.39%, indicating that the full moon does not lead to any extraordinary increase in the number of homicides.  
 
 * Calculated the standard deviation (=STDEV(E2:E4)) of the percentage of full moon murders which is 0.00748, indicating a low dispersion of values about the mean.  
 
@@ -111,7 +111,7 @@ df <- read_csv("homicides_year_chicago.csv", show_col_types = FALSE)
 sample <- nrow(df)
 mean_percent <- mean(df$percent)
 stdev <- sd(df[["percent"]])
-margin_error <- qt(0.975,22)* stdev/sqrt(22)
+margin_error <- round((qt(0.975,22)* stdev/sqrt(23)),4)
 lower_interval <- mean_percent - margin_error
 upper_interval <- mean_percent + margin_error
 print(paste0("Sample Size: ",sample))
@@ -138,11 +138,11 @@ p
 
   After analyzing the data, R Markdown language was used to create this presentation that is shared on [git@github.com:marcuscrodriguez/marcusc.git](https://github.com/marcuscrodriguez/marcusc.git) and on my personal website [www.marcusc.com](https://www.marcusc.com). 
   
-  *Based on the analysis of data covering twenty-two years, there are no increases in homicides that may be attributed to the full phase of the moon.  
+  *Based on the analysis of data covering twenty-three years, there are no increases in homicides that may be attributed to the full phase of the moon.  
   
 ### 6.(A)ct  
   
-  *Based on the shared analysis, no action is necessary as it relates to staffing and emergency personnel requirements during a full moon as it does not impact the number of homicides.  
+  *Based on the shared analysis, action is not necessary as it relates to staffing and emergency personnel requirements during a full moon as it does not impact the number of homicides.  
    
   *Given the high number of annual homicides, additional studies and resources should be expended to explore the potential root causes of the high murder rates, including but not limited to socioeconomic, psychological, criminal justice factors as well as local gun legislation.   
 
